# fastapi-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 37b3c7d3c3dd_add_scheduled_reports_tables.py  a8561a952f6e_initial_migration.py
app/: __init__.py  main.py
app/kamesan/: __init__.py
app/kamesan/api/: __init__.py
app/kamesan/core/: __init__.py  config.py  database.py  deps.py  security.py
app/kamesan/models/: __init__.py  audit_log.py  base.py  combo.py  customer.py  inventory.py  invoice.py  order.py  pricing.py  product.py  promotion.py  purchase.py  report_schedule.py  report_template.py  settings.py  shift.py  stock.py  store.py  supplier.py  system_config.py  user.py  variant.py
app/kamesan/schemas/: __init__.py  audit_log.py  auth.py  combo.py  common.py  customer.py  inventory.py  invoice.py  numbering.py  order.py  payment_method.py  pricing.py  product.py  product_import.py  product_label.py  promotion.py  purchase.py  purchase_suggestion.py  report_schedule.py  (+11 more)
scripts/: init_db.sql  seed_data.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_auth.py  test_categories.py  test_customers.py  test_inventories.py  test_orders.py  test_products.py  test_promotions.py  test_purchase_orders.py  test_reports.py  test_roles.py  test_stores.py  test_suppliers.py  test_users.py
tests/unit/: test_security.py  test_services.py  test_tasks.py
(+49 files in other folders)
